--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "homepage":"https://ygzaydn.github.io/todo/",
   "name": "todo",
   "version": "0.1.0",
-  "private": true,
+  "private":true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -25,6 +26,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9",
-    "@types/uuid": "^8.3.1"
+    "@types/uuid": "^8.3.1",
+    "gh-pages": "^3.2.3"
   }
 }
